@@ -1,19 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<Project DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003" ToolsVersion="3.5">
+<Project DefaultTargets="Build" ToolsVersion="3.5" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProductVersion>9.0.21022</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
-    <ProjectGuid>{70CDFE8C-DC99-41E8-8A0D-748EE58DDF46}</ProjectGuid>
+    <ProjectGuid>{E0DEBB1E-C6BD-4A61-A0C3-7746B528174A}</ProjectGuid>
     <OutputType>Exe</OutputType>
     <TargetFrameworkVersion>v2.0</TargetFrameworkVersion>
-    <FileUpgradeFlags>
-    </FileUpgradeFlags>
-    <OldToolsVersion>2.0</OldToolsVersion>
-    <UpgradeBackupLocation>
-    </UpgradeBackupLocation>
-    <AssemblyName>map2kml</AssemblyName>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -23,12 +17,11 @@
     <DefineConstants>DEBUG</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
-    <Commandlineparameters>../../../Cumberland.Tests/maps/mexico.xml</Commandlineparameters>
     <EnvironmentVariables>
-      <EnvironmentVariables />
+      <EnvironmentVariables xmlns="" />
     </EnvironmentVariables>
     <StartupObject />
-    <LangVersion>ISO_2</LangVersion>
+    <AssemblyName>map2kml</AssemblyName>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>none</DebugType>
@@ -37,35 +30,31 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
     <StartupObject />
-    <LangVersion>ISO_2</LangVersion>
+    <AssemblyName>Cumberland.MapToKml</AssemblyName>
   </PropertyGroup>
-  <ItemGroup>
-    <Reference Include="NDesk.Options, Version=0.2.0.0, Culture=neutral, PublicKeyToken=null">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>lib\NDesk.Options.dll</HintPath>
-    </Reference>
-    <Reference Include="System" />
-  </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\cumberland\Cumberland.csproj">
       <Project>{0F516D1A-446C-46E6-8AD0-7C6573C338D8}</Project>
       <Name>Cumberland</Name>
     </ProjectReference>
-    <ProjectReference Include="..\Cumberland.Data.SqlServer\Cumberland.Data.SqlServer.csproj">
-      <Project>{E67F34B9-0BB0-462B-B935-135093833A77}</Project>
-      <Name>Cumberland.Data.SqlServer</Name>
-    </ProjectReference>
     <ProjectReference Include="..\Cumberland.Data.PostGIS\Cumberland.Data.PostGIS.csproj">
       <Project>{6F5ECB63-A48C-42B8-B4E2-CD613C8CAFD2}</Project>
       <Name>Cumberland.Data.PostGIS</Name>
     </ProjectReference>
+    <ProjectReference Include="..\Cumberland.Data.SqlServer\Cumberland.Data.SqlServer.csproj">
+      <Project>{E67F34B9-0BB0-462B-B935-135093833A77}</Project>
+      <Name>Cumberland.Data.SqlServer</Name>
+    </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <Reference Include="NDesk.Options, Version=0.2.0.0, Culture=neutral, PublicKeyToken=null">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>lib\NDesk.Options.dll</HintPath>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Main.cs" />
     <Compile Include="AssemblyInfo.cs" />
-  </ItemGroup>
-  <ItemGroup>
-    <Folder Include="lib/" />
   </ItemGroup>
   <ItemGroup>
     <None Include="lib\NDesk.Options.COPYING" />
@@ -74,7 +63,7 @@
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ProjectExtensions>
     <MonoDevelop>
-      <Properties>
+      <Properties xmlns="">
         <GtkDesignInfo />
       </Properties>
     </MonoDevelop>
